--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,18 @@
 .color {
   color: #a97c25;
 }
+.group:hover img {
+  color: #a97c25;
+}
+
+.svg-color {
+  /* Apply initial color #2F4688 using filter */
+  filter: invert(29%) sepia(36%) saturate(745%) hue-rotate(179deg)
+    brightness(92%) contrast(88%);
+}
+
+/* Change the color to #a97c25 on card hover */
+.group:hover .svg-color {
+  filter: invert(57%) sepia(60%) saturate(451%) hue-rotate(1deg) brightness(95%)
+    contrast(90%);
+}
